Created a EntryDto for a plp Code for using many contenttypes and locals in the homecontroller

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,10 +9,11 @@
 
   "ContentfulOptions": {
     "DeliveryApiKey": "NyyEAaTDWYsUA98N6YuU_QTMxQ9OL7LT57OK-Dejefk",
-    "ManagementApiKey": "<cma_access_token>",
+    "ManagementApiKey": "CFPAT-YYf3jgmv1S6oL_O88EUxinblMJNhApjXpsRcaH5FrJo",
     "PreviewApiKey": "<preview_access_token>",
     "SpaceId": "p7vzp7ftmsr1",
     "UsePreviewApi": false,
-    "MaxNumberOfRateLimitRetries": 0
+    "MaxNumberOfRateLimitRetries": 0,
+    "Environment": "stage"
   }
 }
