--- a/ContentfulApp.csproj
+++ b/ContentfulApp.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="contentful.aspnetcore" Version="7.5.1" />
     <PackageReference Include="contentful.csharp" Version="7.5.1" />
+    <PackageReference Include="Contentful.RichTextParser" Version="0.0.7" />
     <PackageReference Include="EPPlus" Version="7.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
