--- a/ContentfulApp.csproj
+++ b/ContentfulApp.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Contentful.RichTextParser" Version="0.0.7" />
     <PackageReference Include="EPPlus" Version="7.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Polly" Version="8.4.0" />
   </ItemGroup>
 
 </Project>
